--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,4 +39,11 @@ jobs:
       # run tests!
       - run: yarn test
 
-
+deployment:
+  website:
+    branch: master
+    commands:
+      - git config --global user.email "<GITHUB_USERNAME>@users.noreply.github.com"
+      - git config --global user.name "<YOUR_NAME>"
+      - echo "machine github.com login <GITHUB_USERNAME> password $GITHUB_TOKEN" > ~/.netrc
+      - cd website && npm install && GIT_USER=<GIT_USER> npm run publish-gh-pages
