--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,10 @@ jobs:
     working_directory: ~/
 
     steps:
-      - run: git config --global user.email "se@users.noreply.github.com"
-      - run: git config --global user.name "Selçuk Ermaya"
-      - run: echo "machine github.com login <GITHUB_USERNAME> password $GITHUB_TOKEN" > ~/.netrc
-      - run: cd website && yarn install && GIT_USER=se yarn run publish-gh-pages
-      - run: echo "Done!"
+      - run: 
+        git config --global user.email "se@users.noreply.github.com"
+        git config --global user.name "Selçuk Ermaya"
+        echo "machine github.com login <GITHUB_USERNAME> password $GITHUB_TOKEN" > ~/.netrc
+        ls -al
+        cd website && yarn install && GIT_USER=se yarn run publish-gh-pages
+        echo "Done"
