--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           command: |
             git config --global user.email "se@users.noreply.github.com"
             git config --global user.name "Selçuk Ermaya"
-            echo "machine github.com login <GITHUB_USERNAME> password $GITHUB_TOKEN" > ~/.netrc
+            echo "machine github.com login se password $GITHUB_TOKEN" > ~/.netrc
             pwd
             ls -al
             cd website && yarn install && GIT_USER=se yarn run publish-gh-pages
